--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,12 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Tests.Controls"
              x:Class="Tests.MainPage">
-
-    <StackLayout local:RadioButtonGroup.GroupName="OptionsGroup"
+        <StackLayout local:RadioButtonGroup.GroupName="OptionsGroup"
              local:RadioButtonGroup.SelectedValue="{Binding SelectedOption}">
         <HorizontalStackLayout >
-        <Frame Margin="5">
-        <local:ImageRadioButton Text="Option 1" ImageSource="dotnet_bot.png" IsChecked="{Binding Option1IsChecked}" Value="Option1" GroupName="OptionsGroup"/>
+        <Frame Margin="5" HeightRequest="200">
+        <local:ImageRadioButton Text="Option 1" ImageSource="dotnet_bot.png" IsChecked="{Binding Option1IsChecked}" Value="Option1" GroupName="OptionsGroup" />
         </Frame>
         <Frame Margin="5">
         <local:ImageRadioButton Text="Option 2" ImageSource="dotnet_bot.png" IsChecked="{Binding Option2IsChecked}" Value="Option2" GroupName="OptionsGroup"/>
